Scanline screen effect
It can be enabled via the menubar (currently Windows only). Effective
especially for games with 200-line screen mode, such as Little Vampire
and Intruder.

--- a/src/win/resource.rc
+++ b/src/win/resource.rc
@@ -40,6 +40,8 @@ BEGIN
     BEGIN
         MENUITEM "Window",                      ID_SCREEN_WINDOW
         MENUITEM "Fullscreen",                  ID_SCREEN_FULL
+        MENUITEM SEPARATOR
+        MENUITEM "Scanline effect",             ID_SCANLINE
     END
     POPUP "Sound"
     BEGIN
