--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,7 +35,7 @@ android {
     if (!project.hasProperty('EXCLUDE_NATIVE_LIBS')) {
         sourceSets.main {
             jniLibs.srcDir 'libs'
-            assets.srcDir '../../resources'
+            assets.srcDir '../../fonts'
         }
         aaptOptions {
             // Disable asset compression for fonts.
