--- a/.github/workflows/windows-msvc.yml
+++ b/.github/workflows/windows-msvc.yml
@@ -28,8 +28,17 @@ jobs:
         cmake --build . --config Release
         cmake --install . --prefix artifacts
 
-    - name: Upload
-      uses: actions/upload-artifact@v2
+    #- name: Upload
+    #  uses: actions/upload-artifact@v2
+    #  with:
+    #    name: ${{ matrix.package }}
+    #    path: out/artifacts
+    
+    - uses: "marvinpinto/action-automatic-releases@latest"
       with:
-        name: ${{ matrix.package }}
-        path: out/artifacts
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: "v0.90.0"
+        prerelease: true
+        title: "Windows Debugger"
+        files: |
+          out/artifacts
