--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,14 @@
 cmake_minimum_required(VERSION 3.13)
 
 project(System3 LANGUAGES CXX)
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_FLAGS_RELEASE "/MT")
-set(CMAKE_CXX_FLAGS_DEBUG "/MTd")
-set(CMAKE_CXX_FLAGS "/MTd")
-set(CMAKE_C_FLAGS_RELEASE "/MT")
-set(CMAKE_C_FLAGS_DEBUG "/MTd")
-set(CMAKE_C_FLAGS "/MTd")
+
+if(MSVC)
+    add_compile_options(
+        $<$<CONFIG:>:/MT> #---------|
+        $<$<CONFIG:Debug>:/MTd> #---|-- Statically link the runtime libraries
+        $<$<CONFIG:Release>:/MT> #--|
+    )
+endif()
 
 # In msys, `pkg-config --libs` returns `-lmingw32` but find_library() cannot
 # find it in default search paths.
